@@ -14,6 +14,8 @@ version 0.7.0 - XX-Feb-2009
  . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
  . Director: winSize returns a CGSize (not a CGRect) (issue #159)
  . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
+ . Experimental: Added StreakDemo (issue #171)
+ . MenuItemFont: assign correct size and documented isEnabled (issue #132)
  . Transitions: added new transitions: 
 	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
 	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
